[package]
name = "figma-agent"
version = "0.4.3"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
axum = "=0.8.8"
fontconfig-parser = "=0.5.8"
harfrust = "=0.5.0"
interp = "=2.1.2"
itertools = "=0.14.0"
jsonc-parser = { version = "=0.29.0", features = ["serde"] }
listenfd = "=1.0.2"
read-fonts = "=0.37.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
skrifa = "=0.40.0"
svg = "=0.18.0"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tower = { version = "=0.5.3", features = ["full"] }
tower-http = { version = "=0.6.8", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"
walkdir = "=2.5.0"
xdg = "=3.0.0"
