[package]
name = "figma-agent"
version = "0.2.8"
edition = "2021"

[dependencies]
actix-cors = { version = "0.6.4", features = ["draft-private-network-access"] }
actix-files = "0.6.2"
actix-web = "4.4.0"
env_logger = "0.10.1"
figma-agent-fontconfig = { path = "../fontconfig" }
figma-agent-freetype = { path = "../freetype" }
itertools = "0.11.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
xdg = "2.5.2"
