[package]
name = "figma-agent"
version = "0.3.2"
edition = "2021"

[dependencies]
actix-cors = { version = "=0.7.0", features = ["draft-private-network-access"] }
actix-files = "=0.6.5"
actix-web = "=4.5.1"
env_logger = "=0.11.2"
figma-agent-fontconfig = { path = "../fontconfig" }
figma-agent-freetype = { path = "../freetype" }
itertools = "=0.12.1"
lazy_static = "=1.4.0"
listenfd = "=1.0.1"
parking_lot = "=0.12.1"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.115"
xdg = "=2.5.2"
