[package]
name = "fontconfig-sys"
version = "0.0.0"
edition = "2021"

[dependencies]
freetype-sys = { path = "../freetype-sys" }
libc = "0.2.126"

[build-dependencies]
bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git", rev = "5a01c551993e56d20240ef64d0ec78cd4195855d" }
pkg-config = "0.3.25"
